Bug 517454 - Remote desktop restore token is given when restore is unchecked in question dialog
Summary: Remote desktop restore token is given when restore is unchecked in question d...
Status: RESOLVED FIXED
Alias: None
Product: xdg-desktop-portal-kde
Classification: Plasma
Component: general (other bugs)
Version First Reported In: 6.6.2
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: Plasma Bugs List
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2026-03-11 23:59 UTC by Błażej Szczygieł
Modified: 2026-05-22 20:39 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 6.6.6
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Błażej Szczygieł 2026-03-11 23:59:09 UTC
SUMMARY
Remote desktop restore token is given when restore checkbox is unchecked in question dialog.

STEPS TO REPRODUCE
1. Use 'persist_mode' of '2' for 'SelectDevices' method.
2. When the permissions dialog appears, uncheck the checkbox to not allow for session restore.

OBSERVED RESULT
'restore_token' is given and it's possible to use it to restore session.

EXPECTED RESULT
Session restore is not possible, because we didn't allow for this.

SOFTWARE/OS VERSIONS
KDE Plasma Version: 6.6.2
KDE Frameworks Version: 6.23.0
Qt Version: 6.10.2
Comment 1 Bug Janitor Service 2026-05-20 11:42:58 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/xdg-desktop-portal-kde/-/merge_requests/563
Comment 2 Nate Graham 2026-05-22 20:28:04 UTC
Git commit cdb8e76a962d5557262653b59d5d1cce6e379d5a by Nate Graham, on behalf of David Redondo.
Committed on 22/05/2026 at 13:04.
Pushed by ngraham into branch 'master'.

remoteDesktop: Fix not persisting sessions.

The user choice in the dialog was ignored. Also store the selected
mode in the session so there is only one place where it is stored
and less confusing.
FIXED-IN:6.6.6

M  +14   -13   src/remotedesktop.cpp

https://invent.kde.org/plasma/xdg-desktop-portal-kde/-/commit/cdb8e76a962d5557262653b59d5d1cce6e379d5a
Comment 3 Nate Graham 2026-05-22 20:39:40 UTC
Git commit 941e70b3a2ae7667ef111452d0564d2c2ddff960 by Nate Graham.
Committed on 22/05/2026 at 20:28.
Pushed by ngraham into branch 'Plasma/6.7'.

remoteDesktop: Fix not persisting sessions.

The user choice in the dialog was ignored. Also store the selected
mode in the session so there is only one place where it is stored
and less confusing.
FIXED-IN:6.6.6


(cherry picked from commit cdb8e76a962d5557262653b59d5d1cce6e379d5a)

Co-authored-by: David Redondo <kde@david-redondo.de>

M  +14   -13   src/remotedesktop.cpp

https://invent.kde.org/plasma/xdg-desktop-portal-kde/-/commit/941e70b3a2ae7667ef111452d0564d2c2ddff960