remoteDesktop: Fix not persisting sessions.

The user choice in the dialog was ignored. Also store the selected
mode in the session so there is only one place where it is stored
and less confusing.
BUG:517454
FIXED-IN:6.6.6


(cherry picked from commit cdb8e76a962d5557262653b59d5d1cce6e379d5a)

Co-authored-by: David Redondo <kde@david-redondo.de>